--- a/package.json
+++ b/package.json
@@ -11,8 +11,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bootstrap": "4.6.0",
     "copy-webpack-plugin": "7.0.0",
     "cross-env": "7.0.3",
+    "css-loader": "5.1.0",
+    "css-minimizer-webpack-plugin": "^1.2.0",
+    "file-loader": "6.2.0",
+    "font-awesome": "4.7.0",
+    "jquery": "3.5.1",
+    "mini-css-extract-plugin": "1.3.9",
+    "sass": "1.32.8",
+    "sass-loader": "11.0.1",
+    "style-loader": "2.0.0",
     "webpack": "5.24.2",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2"
